; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_variables.c_vlclua_var_get.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_variables.c_vlclua_var_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"vlc_object\00", align 1
@VLC_SUCCESS = common dso_local global i64 0, align 8
@VLC_VAR_STRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_var_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_var_get(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32** @luaL_checkudata(i32* %8, i32 1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i32** %9, i32*** %5, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i8* @luaL_checkstring(i32* %10, i32 2)
  store i8* %11, i8** %6, align 8
  %12 = load i32**, i32*** %5, align 8
  %13 = load i32*, i32** %12, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @var_Type(i32* %13, i8* %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32**, i32*** %5, align 8
  %17 = load i32*, i32** %16, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i64 @var_Get(i32* %17, i8* %18, %struct.TYPE_4__* %4)
  %20 = load i64, i64* @VLC_SUCCESS, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %39

23:                                               ; preds = %1
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @lua_pop(i32* %24, i32 2)
  %26 = load i32*, i32** %3, align 8
  %27 = load i32, i32* %7, align 4
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @vlclua_pushvalue(i32* %26, i32 %27, i32 %29)
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* @VLC_VAR_STRING, align 4
  %33 = icmp eq i32 %31, %32
  br i1 %33, label %34, label %38

34:                                               ; preds = %23
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @free(i32 %36)
  br label %38

38:                                               ; preds = %34, %23
  store i32 1, i32* %2, align 4
  br label %39

39:                                               ; preds = %38, %22
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32** @luaL_checkudata(i32*, i32, i8*) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i32 @var_Type(i32*, i8*) #1

declare dso_local i64 @var_Get(i32*, i8*, %struct.TYPE_4__*) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @vlclua_pushvalue(i32*, i32, i32) #1

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
